# question_ranker

./: .gitignore  README.md  calculate_embeddings.py  test_similarity.py
backend/: manage.py  pyproject.toml
backend/question_ranker/: asgi.py  settings.py  urls.py  wsgi.py
backend/questions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/questions/management/commands/: load_questions.py
backend/questions/migrations/: 0001_initial.py  0002_questionreport.py
backend/templates/admin/: index.html  stats.html
backend/users/: views.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  AuthContext.tsx  Game.tsx  Login.tsx  api.ts  types.ts
frontend/src/components/: GameHistory.tsx  ReportDialog.tsx
frontend/src/components/ui/: progress.tsx
